# tree-sitter-fusion4

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.fu  tree-sitter.json
bindings/c/: tree-sitter-fusion4.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fusion4/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFusion4/: fusion4.h
bindings/swift/TreeSitterFusion4Tests/: TreeSitterFusion4Tests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
